# PaperMentor_OS

./: .gitignore  README.md  pyproject.toml
docs/architecture/: ARCHITECTURE.md  SKILL_REGISTRY.md
docs/engineering/: DEVELOPMENT_GUIDE.md  DEVELOPMENT_PROGRESS.md  ENV_SETUP.md  TECH_STACK.md
docs/product/: PRD.md
docs/roadmap/: DOCUMENT_MAP.md
references/: README.md
references/articles/: README.md
scripts/: run_async_api_smoke.py  run_benchmark.py  run_live_llm_smoke.py  run_review.py
skills/computer-science-thesis-rules/: rules.md  skill.yaml
skills/debate-judging-schema/: output_schema.json  skill.yaml
skills/dimension-report-schema/: output_schema.json  skill.yaml
skills/education-guidance-policy/: policy.md  skill.yaml
skills/evidence-required-policy/: policy.md  skill.yaml
skills/final-report-schema/: output_schema.json  skill.yaml
skills/literature-support-rubric/: rubric.md  skill.yaml
skills/logic-chain-rubric/: rubric.md  skill.yaml
skills/no-ghostwriting-policy/: policy.md  skill.yaml
skills/novelty-depth-rubric/: rubric.md  skill.yaml
skills/review-finding-schema/: output_schema.json  skill.yaml
skills/severity-resolution-rubric/: rubric.md  skill.yaml
skills/topic-clarity-rubric/: rubric.md  skill.yaml
skills/writing-format-rubric/: rubric.md  skill.yaml
src/papermentor_os/: __init__.py  main.py  reviewer_factory.py
tests/: __init__.py
tests/fixtures/: __init__.py  review_cases.py  sample_docx.py
tests/integration/: test_api.py  test_async_api_smoke_script.py  test_benchmark_script.py  test_minimal_review_flow.py  (+6 more)
(+70 files in other folders)
